--- a/css/zhivaya-el-style.css
+++ b/css/zhivaya-el-style.css
@@ -487,7 +487,8 @@ h1 {
     font-size: 12px;
     font-weight: 400;
     line-height: 1.67;
-    color: #555555; }
+    color: #555555;
+    outline: none; }
   .footer__subscribe button {
     border: 1px solid transparent;
     background-color: #ececec; }
